--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 14)
 
 if(MSVC)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3")
-elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
+elseif(CMAKE_COMPILER_IS_GNUCXX)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wconversion -g")
 endif()
 
@@ -24,6 +24,9 @@ if(WIN32)
 			codepad/os/windows.h)
 	set(PLATFORM_DEFINITIONS -DCP_PLATFORM_WINDOWS)
 	set(PLATFORM_LIBRARIES d2d1 dwrite gdi32 windowscodecs)
+	if(CMAKE_COMPILER_IS_GNUCXX)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wa,-mbig-obj")
+	endif()
 elseif(UNIX)
 	find_package(X11 REQUIRED)
 	include_directories(${X11_INCLUDE_DIR})
