--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.7)
 project(codepad)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 if(MSVC)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3")
@@ -16,13 +16,14 @@ include_directories(${OPENGL_INCLUDE_DIR})
 
 if(WIN32)
 	set(PLATFORM_SOURCE
+			codepad/os/windows/filesystem.h
 			codepad/os/windows/font.h
 			codepad/os/windows/misc.h
 			codepad/os/windows/renderer.h
 			codepad/os/windows/window.h
 			codepad/os/windows/windows.cpp
 			codepad/os/windows.h)
-	set(PLATFORM_DEFINITIONS -DCP_PLATFORM_WINDOWS)
+	set(PLATFORM_DEFINITIONS -DCP_PLATFORM_WINDOWS -DNOMINMAX -DOEMRESOURCE)
 	set(PLATFORM_LIBRARIES d2d1 dwrite gdi32 windowscodecs)
 	if(CMAKE_COMPILER_IS_GNUCXX)
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wa,-mbig-obj")
@@ -46,22 +47,36 @@ endif()
 
 set(SOURCE_FILES
 		codepad/editors/code/buffer.h
+		codepad/editors/code/codebox.cpp
 		codepad/editors/code/codebox.h
 		codepad/editors/code/components.h
+		codepad/editors/code/context.cpp
 		codepad/editors/code/context.h
+		codepad/editors/code/editor.cpp
 		codepad/editors/code/editor.h
+		codepad/editors/code/view.h
 		codepad/editors/docking.h
+		codepad/os/current/all.h
+		codepad/os/current/filesystem.h
+		codepad/os/current/font.h
+		codepad/os/current/misc.h
+		codepad/os/current/renderer.h
+		codepad/os/current/window.h
 		codepad/os/current.h
+		codepad/os/filesystem.h
 		codepad/os/misc.h
 		codepad/os/font.h
 		codepad/os/renderer.h
 		codepad/os/window.h
 		codepad/ui/commonelements.h
+		codepad/ui/draw.h
+		codepad/ui/element.cpp
 		codepad/ui/element.h
 		codepad/ui/font_family.h
+		codepad/ui/manager.cpp
 		codepad/ui/manager.h
+		codepad/ui/panel.cpp
 		codepad/ui/panel.h
-		codepad/ui/draw.h
 		codepad/ui/theme_providers.h
 		codepad/ui/window_hotkey_manager.h
 		codepad/utilities/bst.h
@@ -70,6 +85,7 @@ set(SOURCE_FILES
 		codepad/utilities/globals.cpp
 		codepad/utilities/hotkey_registry.h
 		codepad/utilities/misc.h
+		codepad/utilities/performance_monitor.h
 		codepad/utilities/tasks.h
 		codepad/main.cpp
 		${PLATFORM_SOURCE})
