--- a/codepad/codepad.vcxproj.filters
+++ b/codepad/codepad.vcxproj.filters
@@ -45,9 +45,6 @@
     <ClInclude Include="utilities\hotkey_registry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ui\window_hotkey_manager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="utilities\tasks.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -99,9 +96,6 @@
     <ClInclude Include="os\misc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ui\theme_providers.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="utilities\bst.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -147,6 +141,18 @@
     <ClInclude Include="os\current\all.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ui\native_commands.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ui\visual.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ui\element_classes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ui\commands.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -171,6 +177,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ui\panel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="editors\code\context.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ui\native_commands.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ui\visual.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="editors\docking.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
