--- a/codepad/codepad.vcxproj
+++ b/codepad/codepad.vcxproj
@@ -275,6 +275,7 @@
   <ItemGroup>
     <ClInclude Include="editors\code\buffer.h" />
     <ClInclude Include="editors\code\codebox.h" />
+    <ClInclude Include="editors\code\context_manager.h" />
     <ClInclude Include="editors\code\editor.h" />
     <ClInclude Include="editors\code\components.h" />
     <ClInclude Include="editors\code\view.h" />
