--- a/codepad/codepad.vcxproj.filters
+++ b/codepad/codepad.vcxproj.filters
@@ -15,12 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="utilities\event.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="utilities\misc.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="ui\element.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -40,12 +34,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="os\renderer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="utilities\hotkey_registry.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="utilities\tasks.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="editors\code\components.h">
@@ -72,9 +60,6 @@
     <ClInclude Include="ui\font_family.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="utilities\globals.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="os\window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -96,9 +81,6 @@
     <ClInclude Include="os\misc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="utilities\bst.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="editors\code\buffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -109,18 +91,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="editors\code\view.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="utilities\hash_set.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="utilities\performance_monitor.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="utilities\performance_view.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="utilities\encodings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="os\current\font.h">
@@ -156,12 +126,27 @@
     <ClInclude Include="editors\code\context_manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="core\bst.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="core\encodings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="core\event.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="core\hotkey_registry.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="core\misc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="core\tasks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="utilities\globals.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="os\windows\windows.cpp">
@@ -192,6 +177,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="editors\docking.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="core\globals.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
