--- a/codepad/codepad.vcxproj.filters
+++ b/codepad/codepad.vcxproj.filters
@@ -27,9 +27,6 @@
     <ClInclude Include="ui\panel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ui\commonelements.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="os\current.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -144,6 +141,9 @@
     <ClInclude Include="core\tasks.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ui\common_elements.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -180,6 +180,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="core\globals.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ui\common_elements.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
